nodejs/nodejs-bc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: nodejs
  name: nodejs
  namespace:
spec:
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    app: nodejs
    deploymentconfig: nodejs
  strategy:
    rollingParams:
      intervalSeconds: 1
      maxSurge: 1
      maxUnavailable: 0
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nodejs
        deploymentconfig: nodejs
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/demo/nodejs:latest
        imagePullPolicy: Always
        name: nodejs
        ports:
        - containerPort: 8080
          protocol: TCP
  test: false
  triggers:
  - type: ConfigChange
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
      - nodejs
      from:
        kind: ImageStreamTag
        name: nodejs:latest
        namespace: 
---
# To access the registry
# oc get svc -n openshift-image-registry
# docker login -u demo -p $(oc whoami -t) registry.apps.noverit.osc.link:443
