nodejs/nodejs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodejs
  name: nodejs
  namespace:
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: nodejs
    deploymentconfig: nodejs
  sessionAffinity: None
  type: ClusterIP
