nodejs/nodejs-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp
  annotations:
spec:
  rules:
  - host: webapp.kube.noverit.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nodejs
          servicePort: 8080
